# x11anywhere

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  README.md  build.rs
.claude/agents/: commit-ready-reviewer.md
.github/workflows/: build.yml  visual_test.yml  xorg_apps_test.yml
docs/: xcalc_protocol_analysis.md
docs/screenshots/: .gitkeep
docs/screenshots/xorg-apps/windows/: status.txt
examples/: passthrough_server.rs  test_client.rs  test_server.rs  x11_proxy.rs
src/: lib.rs  main.rs
src/backend/: macos.rs  mod.rs  null.rs  trait.rs  windows.rs  x11.rs
src/connection/: mod.rs
src/protocol/: encoder.rs  errors.rs  events.rs  mod.rs  parser.rs  requests.rs  setup.rs  types.rs
src/resources/: mod.rs
src/security/: mod.rs
src/server/: client.rs  extensions.rs  listener.rs  mod.rs
swift/: Package.swift
swift/Sources/X11AnywhereBackend/: MacOSBackend.swift
tests/: README.md  screenshot.rs  visual_test.rs
